--- a/source/_posts/英文面试合集.md
+++ b/source/_posts/英文面试合集.md
@@ -9,27 +9,32 @@ tags:
 
 #### 单词发音
 
-| Word          | Phonetic        | Translation |
-| ------------- | --------------- | ----------- |
-| career        | kəˈrɪə          | 职业生涯    |
-| graduated     | ˈgræʤuːeɪtɪd    | 毕业        |
-| bachelor      | bæʧələ          | 学士        |
-| pleasure      |                 |             |
-| familiar      | fəˈmɪljə        |             |
-| framework     | ˈfreɪmwɜːk      |             |
-| experienced   | ɪkˈspɪəriːənst  |             |
-| concurrency   |                 |             |
-| availability  | əˌveɪləˈbɪlətiː |             |
-| architecture  | ˈɑːkətekʧə      |             |
-| driven        |                 |             |
-| enthusiasm    | ɪnˈθjuːziːæzəm  |             |
-| analysis      | əˈnæləsɪs       |             |
-| oriented      | ˈɔːriːəntɪd     |             |
-| Encapsulation |                 |             |
-|               |                 |             |
-|               |                 |             |
-|               |                 |             |
-|               |                 |             |
+| Word           | Phonetic         | Translation |
+| -------------- | ---------------- | ----------- |
+| career         | kəˈrɪə           | 职业生涯    |
+| graduated      | ˈgræʤuːeɪtɪd     | 毕业        |
+| bachelor       | bæʧələ           | 学士        |
+| pleasure       |                  |             |
+| familiar       | fəˈmɪljə         |             |
+| framework      | ˈfreɪmwɜːk       |             |
+| experienced    | ɪkˈspɪəriːənst   |             |
+| concurrency    |                  |             |
+| availability   | əˌveɪləˈbɪlətiː  |             |
+| architecture   | ˈɑːkətekʧə       |             |
+| driven         |                  |             |
+| enthusiasm     | ɪnˈθjuːziːæzəm   |             |
+| analysis       | əˈnæləsɪs        |             |
+| oriented       | ˈɔːriːəntɪd      |             |
+| Encapsulation  |                  |             |
+| occurs         |                  |             |
+| promoted       | prəˈmōt          | 晋升        |
+| Integration    | ˌɪntɪˈgreɪʃən    | 一体化      |
+| Delivery       | dɪˈlɪvəri        | 交付        |
+| initialization | [ɪˌnɪʃələˈzeɪʃn] | 刷          |
+|                |                  |             |
+|                |                  |             |
+|                |                  |             |
+|                |                  |             |
 
 
 
@@ -38,7 +43,7 @@ tags:
 #### 自我介绍
 
 ````tiddlywiki
-Good morning sir/madam, it's my pleasure to introduce myself. My name's Xiehuake, In the summer of 2021, I graduated from Zhengzhou University of Light Industry with a bachelor’s degree in Computer Science and Technology.After graduation, I started my career as a Recommond system engineer at ZP LAB in Beijing city.As a Java Dep, I have a core Java based,good programming style,and familiar with Spring reids kafka Es and other famours open source framework.And i also familiar with Java multi-thread programming and read the source code of Java current Utils pakage.And  I’m experienced with high concurrency and high availability architecture practice.
+Good morning sir/madam, it's my pleasure to introduce myself. My name's Xiehuake, In the summer of 2021, I graduated from Zhengzhou University of Light Industry with a bachelor’s degree in Computer Science and Technology.After graduation, I started my career as a Recommondation system engineer at ZP LAB in Beijing city.As a Java Dep, I have a core Java based,good programming style,and familiar with Spring reids kafka Es and other famours open source framework.And i also familiar with Java multi-thread programming and read the source code of Java current Utils pakage.And  I’m experienced with high concurrency and high availability architecture practice.
 
 As for my personal qualities, I’m very self-driven, responsible and hardworking. I like to read book or online blog to brush up on my skills in my free time. I’m a good team player and I believe I have the combination of experience to contribute to the success of this job. That’s all. Thank you for your listening.
 ````
@@ -50,15 +55,27 @@ The project I'm going to introduce is called the ZHIPIN LAB recommendation syste
 
 In this project, It consists of multiple levels, the first levels is AB Testing, also known as split testing, it's in order to compare two versions of strategy to see which performs better.
 
-And then the next levles is recall, after get the strategys from AB Testing, we search Top-1000 items from tens of millions  data by  elasticsearch with each subrecall strategy. by the way, the  subrecall services exists in the form of Dubbo remote service and local plug-in, other level is also too. 
+And then the next lary is recall, after get the strategys from AB Testing, we search Top-1000 items from tens of millions  data by  elasticsearch with each subrecall strategy. by the way, the  subrecall services exists in the form of Dubbo remote service and local plug-in, other level is also too. 
 
 
 And we fusion the data from each recall, by fusion strategy. also keep top-1000 items, and next step we fill these items into rank system to predict the item score and get the top-200.
 
 after sorting, we sort item one more time, becase we have to controlle some item position in page by our business strategy. In the end we store the item in redis cache, and return  the result, when the same user request the next page, we dont run the recmoond logic once again, but get result from redis to reutrn. And in each Level, we use elk to log major info, such as cost time or data middle status to help we analysis when we get bad case.
 
-this project run in avg 600 QPS and max 1000 QSP envement, and it keep tp999 in 200ms.
+this project run in average 600 QPS and max 1000 QSP envement, and it keep tp999 in 200ms.
 ```
+
+fourteen million job-seeker
+
+nine million job
+
+#### 项目难点
+
+```wiki
+This project has many level, and the total request time required cannot exceed 300 milliseconds, and each levele cannot be parallelized. I mainly develop the recall layer,Recalls are time-consuming because the data size is hight, and this are many recall should be run, so in recall level, i use I use multi threadi to execute thoses recall and use thread pool to controller, and set the threadpool core size is the cpu cores size plus one, to avoid Threads compete for resources，and i Increase the eland to 1g, 
+```
+
+
 
 #### Java基础
 
@@ -112,4 +129,132 @@ Java provides and supports the creation of both the[ abstract classes](http://ex
 
 ##### 9.What is the purpose of a Volatile Variable
 
-aviod reorderding and add memory visibility to each cpu core. some variable can be modified by different threads, and each thread run in the one of cup core, and there is l1 l2 l3 cache in one core, when core acc varilable, it copy the value into the cache, and modify it, and reflush it to share memory, so in mutiple thread, the value mighth be cover by other thread, so add Volatile  modifier, to 
+aviod reorderding and add memory visibility to each cpu core. some variable can be modified by different threads, and each thread run in the one of cup core, and there is l1 l2 l3 cache in one core, when core acc varilable, it copy the value into the cache, and modify it, and reflush it to share memory, so in mutiple thread, the value mighth be cover by other thread, so add Volatile  modifier
+
+##### 10.Explain the available thread states in a high-level.
+
+During its execution, a thread can reside in one of the following[ states](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html):
+
+- [NEW](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#NEW): The thread becomes ready to run, but does not necessarily start running immediately.
+- [RUNNABLE](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#RUNNABLE): The Java Virtual Machine (JVM) is actively executing the thread’s code.
+- [BLOCKED](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#BLOCKED): The thread is in a blocked state while waiting for a monitor lock.
+- [WAITING](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#WAITING): The thread waits for another thread to perform a particular action.
+- [TIMED_WAITING](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#TIMED_WAITING): The thread waits for another thread to perform a particular action up to a specified waiting time.
+- [TERMINATED](https://docs.oracle.com/javase/8/docs/api/java/lang/Thread.State.html#TERMINATED): The thread has finished its execution
+
+##### 11.what is necessary Conditions of Deadlock
+
+- ***Mutual Exclusion:*** Two or more resources are non-shareable (Only one process can use at a time) 
+- ***Hold and Wait:*** A process is holding at least one resource and waiting for resources. 
+- ***No Preemption:*** A resource cannot be taken from a process unless the process releases the resource. 
+- ***Circular Wait:*** A set of processes are waiting for each other in circular form. 
+
+##### 12.What is the purpose of garbage collection in Java, and when is it used
+
+ identify and discard those objects that are no longer needed by the application, in order for the resources to be reclaimed and reused
+
+##### 13.synchronized
+
+- 1 unlocked
+- 2 Biased locking
+- 3 Lightweight lock
+- 4 Heavyweight lock
+
+##### 14.MySQL ACID
+
+- **A**: atomicity. ea de mi xi ti  : Each transaction is considered as one unit and either runs to completion or is not executed at all
+- **C**: consistency. 肯西死ten 洗 this mean in one transaction, it ensures same query will return the smame result
+- **I:**: isolation. 爱西雷神 multiple transactions c
+- **D**: durability. 滴eo逼了第：ensures that once the transaction has completed execution，and never lost
+
+
+
+
+
+#### JVM
+
+##### 1.What is the difference between JVM, JRE and JDK
+
+ is a virtual machine that understands and runs java bytecodes.
+
+##### 2.What is JRE?
+
+java runtime environmen,provides an implementation of the JVM, supporting libraries and other components required to run Java programs
+
+##### 3.What is JDK
+
+Java Development Kit, contains the JRE plus tools such as compilers, debuggers etc. which are required for developers to develop Java programs.
+
+#### 4.What are Java class loaders? What are the key features of Java class loader
+
+Java class loaders are components in JVM that load Java class file at runtime,Each class loader has its own specific namespace, in which it stores the classes that it loads.
+
+Features:
+
+- **Delegation model** :Before a class loader loads a class, it check if its  parent class loader can load the class, if the  parent class loader can load, then the class load by pranet, if not, the child class loader try to load the class, 
+
+- Bootstrap class loader , Extension class loader, application class loader, user defined class loader
+
+#### 5.What are the benefits and negatives of the garbage collector
+
+- on the positive size:
+  - the developer can worry much less about memory management 
+  - the gc has a lot of smart algorithms for memory management which work automatically in the background
+- on the negative size:
+  - when a garbage collection occurs it has an effect on the application performance, which slowing it down or stopping it.
+
+#### 6.What is "stop the world"
+
+when a gc happens it is necessary to completely pause the threads in an application,this is known as stop the world
+
+#### 7.What is new generation
+
+most applications have a lot of short lived objects,so it therefore makes sense to separate the shortlived objects so that they can be quickly collected.as a result all new objects are placed into the new generation. new gen is split up further
+
+- **eden space**: all new objects are placed in here.  when it becomes full, a **minor gc** occurs.  all objects that are still referenced are then promoted to a **survivor space**
+
+- two survivor spaces, a from space and a to space. during each collection these will swap roles, with all **promoted** eden objects and surviving objects move to the to space, leaving from empty。
+
+#### 8.collector
+
+- **serial gc**：designed when computers only had one cpu and stops the entire application,because it only use one thread, it use it uses **mark-sweep-compact**
+- **parallel gc**: similar to serial, except that it uses multiple threads to perform the gc so should be faster.
+
+#### CICD
+
+##### CI 持续集成（Continuous Integration）
+
+中文：帮助开发人员更加频繁地（有时甚至每天）将代码更改合并到共享分支或"主干"中。一旦开发人员对应用所做的更改被合并，系统就会通过自动构建应用并运行不同级别的自动化测试（通常是单元测试和集成测试）来验证这些更改，那问题：那开发到一半的代码怎么办？
+
+CI and CD stand for continuous integration and continuous delivery, CI is a software development practice that automated build-and-test steps triggered by CI ensure that code changes being merged into the repository auto.
+
+##### CD 持续交付（Continuous Delivery）
+
+ The code is then delivered quickly and seamlessly as a part of the CD process
+
+##### What are the benefits of CI/CD?
+
+- Automated testing enables continuous delivery, which ensures software quality of code in production.
+- CI/CD enable a much shorter time to market for new product features
+- The great increase in overall speed of delivery enabled by CI/CD  improves an organization’s competitive edge.
+- Automation frees team members to focus on what they do best
+
+##### What is Agile 
+
+Agile software development .a set of engineering best practices intended to allow for fast delivery of high-quality software, and a business approach that aligns development with customer needs and company goals. Agile development refers to any development process that is aligned with the concepts 
+
+##### WHAT IS SCRUM?
+
+Scrum is a subset of Agile. It is a lightweight process framework for agile development, and the most widely-used one.
+
+#### 反问
+
+##### 1.What challenges will I encounter in this position
+
+
+
+book
+
+How to Win Friends
+
+algorithm 4 base with java 
