--- a/source/_posts/英文面试合集.md
+++ b/source/_posts/英文面试合集.md
@@ -7,43 +7,10 @@ tags:
 
 # 英文面试合集
 
-#### 单词发音
-
-| Word           | Phonetic         | Translation |
-| -------------- | ---------------- | ----------- |
-| career         | kəˈrɪə           | 职业生涯    |
-| graduated      | ˈgræʤuːeɪtɪd     | 毕业        |
-| bachelor       | bæʧələ           | 学士        |
-| pleasure       |                  |             |
-| familiar       | fəˈmɪljə         |             |
-| framework      | ˈfreɪmwɜːk       |             |
-| experienced    | ɪkˈspɪəriːənst   |             |
-| concurrency    |                  |             |
-| availability   | əˌveɪləˈbɪlətiː  |             |
-| architecture   | ˈɑːkətekʧə       |             |
-| driven         |                  |             |
-| enthusiasm     | ɪnˈθjuːziːæzəm   |             |
-| analysis       | əˈnæləsɪs        |             |
-| oriented       | ˈɔːriːəntɪd      |             |
-| Encapsulation  |                  |             |
-| occurs         |                  |             |
-| promoted       | prəˈmōt          | 晋升        |
-| Integration    | ˌɪntɪˈgreɪʃən    | 一体化      |
-| Delivery       | dɪˈlɪvəri        | 交付        |
-| initialization | [ɪˌnɪʃələˈzeɪʃn] | 刷          |
-|                |                  |             |
-|                |                  |             |
-|                |                  |             |
-|                |                  |             |
-
-
-
-
-
 #### 自我介绍
 
 ````tiddlywiki
-Good morning sir/madam, it's my pleasure to introduce myself. My name's Xiehuake, In the summer of 2021, I graduated from Zhengzhou University of Light Industry with a bachelor’s degree in Computer Science and Technology.After graduation, I started my career as a Recommondation system engineer at ZP LAB in Beijing city.As a Java Dep, I have a core Java based,good programming style,and familiar with Spring reids kafka Es and other famours open source framework.And i also familiar with Java multi-thread programming and read the source code of Java current Utils pakage.And  I’m experienced with high concurrency and high availability architecture practice.
+Good afternon sir/madam, it's my pleasure to introduce myself. My name's Xiehuake, In the summer of 2021, I graduated from Zhengzhou University of Light Industry with a bachelor’s degree in Computer Science and Technology.After graduation, I started my career as a Recommondation system engineer at ZP LAB in Beijing city.As a Java Dep, I have a core Java based,good programming style,kown about CICD workflow and Agile software development, and I familiar with Spring reids kafka Es and other famours open source framework.And i also familiar with Java multi-thread programming and read the source code of Java current Utils pakage.And  I’m experienced with high concurrency and high availability architecture practice.
 
 As for my personal qualities, I’m very self-driven, responsible and hardworking. I like to read book or online blog to brush up on my skills in my free time. I’m a good team player and I believe I have the combination of experience to contribute to the success of this job. That’s all. Thank you for your listening.
 ````
@@ -109,7 +76,7 @@ Encapsulation provides objects with the ability to hide their internal data and 
 
 ##### 6.What is Inheritance 继承
 
-acquire the fields and methods of another class, called base class. Inheritance provides reusability of code and can be used to add additional features to an existing class, without modifying it.
+acquire the fields and methods of another class,Inheritance provides reusability of code and can be used to add additional features to an existing class, without modifying it.
 
 ##### 7.What is a Constructor?
 
@@ -230,22 +197,41 @@ CI and CD stand for continuous integration and continuous delivery, CI is a soft
 
 ##### CD 持续交付（Continuous Delivery）
 
- The code is then delivered quickly and seamlessly as a part of the CD process
+ The code is then delivered quickly as a part of the CD process
 
 ##### What are the benefits of CI/CD?
 
 - Automated testing enables continuous delivery, which ensures software quality of code in production.
 - CI/CD enable a much shorter time to market for new product features
-- The great increase in overall speed of delivery enabled by CI/CD  improves an organization’s competitive edge.
 - Automation frees team members to focus on what they do best
 
 ##### What is Agile 
 
 Agile software development .a set of engineering best practices intended to allow for fast delivery of high-quality software, and a business approach that aligns development with customer needs and company goals. Agile development refers to any development process that is aligned with the concepts 
 
+##### 敏捷开发五大工作
+
+- sprint planning meeting 类似需求评审
+- daily standupdo meeting 同步进度
+- sprint review 回顾冲刺
+
+##### 什么是TDD（测试驱动开发）
+
+- Test-Driven-Dev 在开发功能之前，先编写测试用例，然后编写可以通过测试用例的代码
+
 ##### WHAT IS SCRUM?
 
 Scrum is a subset of Agile. It is a lightweight process framework for agile development, and the most widely-used one.
+
+##### SCURM rule
+
+- SCURM MASTER
+- PRODUCT OWNER
+- SCURM TEAM
+
+
+
+
 
 #### 反问
 
@@ -258,3 +244,33 @@ book
 How to Win Friends
 
 algorithm 4 base with java 
+
+#### 单词发音
+
+| Word           | Phonetic         | Translation |
+| -------------- | ---------------- | ----------- |
+| career         | kəˈrɪə           | 职业生涯    |
+| graduated      | ˈgræʤuːeɪtɪd     | 毕业        |
+| bachelor       | bæʧələ           | 学士        |
+| pleasure       |                  |             |
+| familiar       | fəˈmɪljə         |             |
+| framework      | ˈfreɪmwɜːk       |             |
+| experienced    | ɪkˈspɪəriːənst   |             |
+| concurrency    |                  |             |
+| availability   | əˌveɪləˈbɪlətiː  |             |
+| architecture   | ˈɑːkətekʧə       |             |
+| driven         |                  |             |
+| enthusiasm     | ɪnˈθjuːziːæzəm   |             |
+| analysis       | əˈnæləsɪs        |             |
+| oriented       | ˈɔːriːəntɪd      |             |
+| Encapsulation  |                  |             |
+| occurs         |                  |             |
+| promoted       | prəˈmōt          | 晋升        |
+| Integration    | ˌɪntɪˈgreɪʃən    | 一体化      |
+| Delivery       | dɪˈlɪvəri        | 交付        |
+| initialization | [ɪˌnɪʃələˈzeɪʃn] | 刷          |
+|                |                  |             |
+|                |                  |             |
+|                |                  |             |
+|                |                  |             |
+
