--- a/source/_posts/英文面试合集.md
+++ b/source/_posts/英文面试合集.md
@@ -229,9 +229,24 @@ Scrum is a subset of Agile. It is a lightweight process framework for agile deve
 - PRODUCT OWNER
 - SCURM TEAM
 
+#### Design Patterns
 
+##### What is Design Patterns?
 
+Design patterns are solutions to general problems that software developers faced during software development.
 
+##### Types of Design Patterns
+
+| S.N. | Pattern & Description                                        |
+| ---- | ------------------------------------------------------------ |
+| 1    | **Creational Patterns** These design patterns provide a way to create objects while hiding the creation logic, rather than instantiating objects directly using new operator. This gives program more flexibility in deciding which objects need to be created for a given use case. |
+| 2    | **Structural Patterns** These design patterns concern object composition. Concept of inheritance is used to compose interfaces and define ways to compose objects to obtain new functionalities. |
+| 3    | **Behavioral Patterns** These design patterns are specifically concerned with communication between objects. |
+| 4    | **J2EE Patterns** These design patterns are specifically concerned with the presentation tier. These patterns are identified by Sun Java Center. |
+
+##### Design Pattern - Factory Pattern
+
+In Factory pattern, we create object without exposing the creation logic to the client and refer to newly created object using a common interface
 
 #### 反问
 
