--- a/source/_posts/英文面试合集.md
+++ b/source/_posts/英文面试合集.md
@@ -231,6 +231,8 @@ Scrum is a subset of Agile. It is a lightweight process framework for agile deve
 
 #### Design Patterns
 
+https://www.tutorialspoint.com/design_pattern/builder_pattern.htm
+
 ##### What is Design Patterns?
 
 Design patterns are solutions to general problems that software developers faced during software development.
@@ -239,7 +241,7 @@ Design patterns are solutions to general problems that software developers faced
 
 | S.N. | Pattern & Description                                        |
 | ---- | ------------------------------------------------------------ |
-| 1    | **Creational Patterns** These design patterns provide a way to create objects while hiding the creation logic, rather than instantiating objects directly using new operator. This gives program more flexibility in deciding which objects need to be created for a given use case. |
+| 1    | **Creational Patterns** These design patterns provide a way to create objects while hiding the creation logic, rather than create objects directly using new operator. This gives program more flexibility in deciding which objects need to be created for a given use case. |
 | 2    | **Structural Patterns** These design patterns concern object composition. Concept of inheritance is used to compose interfaces and define ways to compose objects to obtain new functionalities. |
 | 3    | **Behavioral Patterns** These design patterns are specifically concerned with communication between objects. |
 | 4    | **J2EE Patterns** These design patterns are specifically concerned with the presentation tier. These patterns are identified by Sun Java Center. |
@@ -247,6 +249,56 @@ Design patterns are solutions to general problems that software developers faced
 ##### Design Pattern - Factory Pattern
 
 In Factory pattern, we create object without exposing the creation logic to the client and refer to newly created object using a common interface
+
+##### Design Pattern - Abstract Factory Pattern
+
+Abstract Factory patterns work around a super-factory which creates other factories. This factory is also called as factory of factories
+
+##### Design Pattern - Singleton Pattern
+
+This pattern involves a single class which is responsible to create an object while making sure that only single object gets created. This class provides a way to access its only object which can be accessed directly without need to instantiate the object of the class.
+
+##### Design Pattern - Builder Pattern
+
+Builder pattern builds a complex object using simple objects and using a step by step approach
+
+##### Design Patterns - Adapter Pattern
+
+Adapter pattern works as a bridge between two incompatible interfaces.
+
+##### Design Patterns - Proxy Pattern
+
+In proxy pattern, a class represents functionality of another class. This type of design pattern comes under structural pattern.
+
+In proxy pattern, we create object having original object to interface its functionality to outer world.
+
+##### Design Patterns - Strategy Pattern
+
+In Strategy pattern, a class behavior or its algorithm can be changed at run time
+
+##### Design Patterns - Strategy Pattern
+
+#### SOLID principles
+
+1. **S**ingle Responsibility
+
+    **S**ingle Responsibility states that **a class should only have one responsibility. Furthermore, it should only have one reason to change**
+
+2. **O**pen/Closed
+
+​		Open for Extension, Closed for Modification
+
+3. **L**iskov Substitution
+
+   *states that objects of a superclass should be replaceable with objects of its subclasses without breaking the application*
+
+4. **I**nterface Segregation
+
+   larger interfaces should be split into smaller ones
+
+5. **D**ependency Inversion
+
+   Refers to the decoupling of software modules, 	modules comniucation will depend to abstractions not implementation.
 
 #### 反问
 
